# Gobang

./: AI.cpp  AI.h  CMakeLists.txt  Chess.cpp  Chess.h  ChessGame.cpp  ChessGame.h  Man.cpp  Man.h  main.cpp
